Actualizan archivos sobre clase 6 en ´clase_3´

--- a/clase_3/index.html
+++ b/clase_3/index.html
@@ -4,23 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ejercicio clase 3</title>
+    <title>Ejercicio clase 6</title>
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
-  <body style="margin: 2% 25%;">
+  <body>
 
     <header>
-      <img src="./img/logo-front.png" alt="logo-front">
-      <br>
-      <img src="./img/lemon-pie.png" alt="lemon-pie">
-      <br>
-      <h1>El clasico Lemon Pie</h1>     
-      <p>
-        Es el preferido de los que les gusta lo dulce pero no lo empalagoso. El
-        lemon pie es una tarta, es decir, una base de masa y un relleno. Como su
-        nombre lo indica, está hecha con jugo de limón, azúcar y huevos. Todo
-        eso mezclado hace el famoso custard, el relleno cremoso amarillo que es
-        tan típico del lemon pie.
-      </p>
+      <div class="banner">
+        <img src="./img/logo-front.png" alt="logo-front">
+        <br>
+        <br>
+        <h1>El clasico Lemon Pie</h1>     
+        <p>
+          Es el preferido de los que les gusta lo dulce pero no lo empalagoso. El
+          lemon pie es una tarta, es decir, una base de masa y un relleno. Como su
+          nombre lo indica, está hecha con jugo de limón, azúcar y huevos. Todo
+          eso mezclado hace el famoso custard, el relleno cremoso amarillo que es
+          tan típico del lemon pie.
+        </p>
+      </div>
     </header>
 
     <section>
