Se agregan iconos con font-awesome

--- a/clase_3/index.html
+++ b/clase_3/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ejercicio clase 6</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
   </head>
   <body>
 
@@ -26,7 +27,8 @@
     </header>
 
     <section>
-      <h2>Ingredientes para la masa</h2>
+      <h2><i class="fas fa-shopping-basket"></i>  Ingredientes para la masa</h2>
+      
       <ul type="none">
         <li>200g.</li>
         <li>gramos de harina 0000</li>
@@ -49,7 +51,7 @@
         <li>3 claras</li>
       </ul>
 
-      <h2>Instrucciones</h2>
+      <h2><i class="fas fa-list"></i>  Instrucciones</h2>
       <ol>
         <li>
           Procesar o mezclar ligeramente la harina, el azúcar y la manteca fría
