--- a/TP - Heroes (clase 7)/index.html
+++ b/TP - Heroes (clase 7)/index.html
@@ -19,7 +19,7 @@
 		<section>
 			<article class="card">
 				<i class="fas fa-heart fa-3x heart"></i>
-				<img class="profile" src="./img/batman.jpg" alt="">
+				<div class="profile img-super-1"></div>
 				<img class="background" src="./img/bg-batman.jpg" alt="">
 			
 				<div class="card-body">
@@ -31,7 +31,7 @@
 
 			<article class="card">
 				<i class="fas fa-heart fa-3x heart"></i>
-				<img class="profile" src="./img/wonderw.jpg" alt="">
+				<div class="profile img-super-2"></div>
 				<img class="background" src="./img/bg-wonderw.jpg" alt="">
 			
 				<div class="card-body">
@@ -43,7 +43,7 @@
 
 			<article class="card">
 				<i class="fas fa-heart fa-3x heart"></i>
-				<img class="profile" src="./img/superman.jpg" alt="">
+				<div class="profile img-super-3"></div>
 				<img class="background" src="./img/bg-superman.jpg" alt="">
 			
 				<div class="card-body">
