Se cambia el nombre por index

--- a/TP - Formularios (clase 8)/registro.html
+++ b/TP - Formularios (clase 8)/registro.html
@@ -32,7 +32,7 @@
             <input class="resetear" type="reset" value="Resetear">
             <input class="entrar" type="submit" value="Entrar">
             
-            <p>¿Ya tienes una cuenta? <a href="./login.html">Iniciar sesión</a></p>   
+            <p>¿Ya tienes una cuenta? <a href="./index.html">Iniciar sesión</a></p>   
     
         </form>
     </div>
